<resources>
    <string name="app_name">MorrahFarmApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_product">Product</string>
    <string name="title_blog">Blog</string>
    <string name="title_about">About</string>
    <string name="hello">Hello User</string>
    <string name="search_element">Cari</string>
    <string name="home">Home</string>
    <string name="product">Produk</string>
    <string name="about">About</string>
    <string name="contact">Kontak</string>
    <string name="blog">Blog\n</string>
    <string name="dashboard">Dashboard\n</string>
    <string name="produk">Shop\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="produk_fragment">Produk fragment</string>
    <string name="cart_fragment">Cart fragment</string>
    <string name="notice_fragment">Notice Fragment\n</string>
    <string name="cart">Cart</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="helloadmin">Welcome Admin!</string>
    <string name="update">Update</string>
    <string name="update_data">Update Data</string>
    <string name="isi">Isi</string>
    <string name="judul">Judul</string>
    <string name="add_comment">Add Comment\n</string>
    <string name="write_Comment">Write Comment\n</string>
    <string name="shop">Shop\n</string>
    <string name="Riwayat">History\n</string>
    <string name="Chat">Chat\n</string>
    <string name="delete">Delete</string>

</resources>